Remove mongo requirement
