# openapi.yaml
@@ -30,7 +30,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/MongoFeedback'
+              $ref: '#/components/schemas/FeedbackRequest'
       responses:
         '204':
           description: No Content
@@ -46,7 +46,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/MongoFeedback'
+              $ref: '#/components/schemas/FeedbackRequest'
       responses:
         '204':
           description: No Content
@@ -55,7 +55,7 @@ paths:
 
 components:
   schemas:
-    MongoFeedback:
+    FeedbackRequest:
       type: object
       properties:
         feedback:
